# Student-Roster-System

./: CMakeLists.txt  README.md  Student Roster.sln
Debug/: Student Roster.ilk
Student Roster/: Student Roster.vcxproj  degree.h  main.cpp  roster.cpp  roster.h  student.cpp  student.h
Student Roster/Debug/: C867 - Student Roster.exe.recipe  Student Roster.exe.recipe  Student Roster.ilk  Student Roster.vcxproj.FileListAbsolute.txt  main.obj.enc  roster.obj.enc  vc142.idb
Student Roster/Debug/C867 - S.a6e9a412.tlog/: C867 - Student Roster.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Student Roster/Debug/Student Roster.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Student Roster.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
